--- a/Client/pages/login.html
+++ b/Client/pages/login.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/login.css">
     <title>Log in</title>
 </head>
+
 <body>
     <div class="login_container">
-            <form action="" class="login">
-                    <h1>Log in to Student Athlete Hub</h1>
-                <input type="text" placeholder="Email">
-                <input type="text" placeholder="Password">
-                <button class="login_btn">Log in</button>
-                    <div class="signup">
-                        <p>Do not have an account?</p>
-                        <a href="">Sign Up now</a>
-                    </div>
-            </form>
+        <form id="loginForm" class="login" method="POST" action="/login">
+            <h1>Log in to Student Athlete Hub</h1>
+            <input type="text" placeholder="Email" name="email">
+            <input type="password" placeholder="Password" name="password">
+            <button type="submit" class="login_btn">Log in</button>
+            <div class="signup">
+                <p>Do not have an account?</p>
+                <a href="/signup">Sign Up now</a>
+            </div>
+        </form>
         <div class="login_image">
             <img src="../Images/background.png" alt="background image">
         </div>
     </div>
+
+
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+            const formData = new FormData(this);
+            fetch("/login", {
+                method: "POST",
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                })
+                .catch(error => console.error("Error:", error));
+        });
+    </script>
 </body>
+
 </html>
