--- a/Client/pages/login.html
+++ b/Client/pages/login.html
@@ -27,7 +27,7 @@
 
 
     <script>
-        document.getElementById('signin-form').addEventListener('submit', async function(event) {
+        document.getElementById('loginForm').addEventListener('submit', async function(event) {
             event.preventDefault();
 
             const email = document.getElementById('email').value;
