--- a/Client/pages/signup.html
+++ b/Client/pages/signup.html
@@ -60,7 +60,7 @@
       }
     };
 
-    document.getElementById('signup-form').addEventListener('submit', handleSubmit);
+    document.getElementById('signupForm').addEventListener('submit', handleSubmit);
     </script>
 </body>
 
